--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "build": "hexo clean & hexo d & hexo g",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server"
